# iCloudBridge

./: .gitignore  LICENSE  Package.swift  README.md  tail-logs.sh
Icons/: done.icns  done_1024x1024_1024x1024.icns  done_128x128_128x128.icns  done_16x16_16x16.icns  done_256x256_256x256.icns  done_32x32_32x32.icns  done_512x512_512x512.icns  done_64x64_64x64.icns
Sources/iCloudBridge/: AppState.swift  iCloudBridgeApp.swift
Sources/iCloudBridge/API/: AlbumsController.swift  AuthMiddleware.swift  CalendarsController.swift  EventsController.swift  ListsController.swift  PhotosController.swift  RemindersController.swift  Routes.swift
Sources/iCloudBridge/Models/: APIToken.swift  AlbumDTO.swift  AlbumHierarchy.swift  (+6 more)
docs/api/: README.md  index.html  openapi.yaml
docs/plans/: 2025-12-20-reminders-bridge-design.md  2025-12-20-reminders-bridge-implementation.md  2025-12-22-photos-bridge-design.md  2025-12-22-photos-bridge-implementation.md  2025-12-26-photos-ui-improvements-design.md  2025-12-26-photos-ui-improvements-implementation.md  2025-12-27-first-run-onboarding-design.md  2025-12-27-first-run-onboarding-implementation.md  2025-12-28-interactive-python-client-design.md  2025-12-28-interactive-python-client-impl.md  2026-01-01-authentication-design.md  2026-01-01-authentication-implementation.md  2026-01-16-calendar-integration-design.md  2026-01-16-calendar-integration-impl.md
python/: README.md  __init__.py  icloudbridge.py  pyproject.toml
python/docs/: api.rst  conf.py  index.rst  photos.rst  quickstart.rst  reminders.rst
scripts/: build.sh  serve-docs.sh
(+13 files in other folders)
